hub/templates/observedelete.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: observedelete
spec:
  crd:
    spec:
      names:
        kind: ObserveDelete
        listKind: ObserveDeleteList
        plural: observedeltes
        singular: observedelte
      scope: Namespaced
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package observedelete

        violation[{"msg": msg}] {
          user := input.review.userInfo.username
          op := input.review.operation
          op == "DELETE"
          msg := sprintf("This user tried to delete %v, operation: %v", [user, op])
        }
